# SplatCredBench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/baselines/: density.yaml  hybrid.yaml  opacity.yaml  reproj.yaml
configs/metrics/: sru_auc.yaml
datasets/: README.md  __init__.py
datasets/loaders/: __init__.py  generic_scene.py  realestate_like.py  scannet_like.py
datasets/protocols/: __init__.py  heldout_eval.py
examples/: README.md  demo_config.yaml
examples/scene_001/: README.md  cameras.json
splatcredb/baselines/: __init__.py  density_conf.py  hybrid_conf.py  learned_conf.py  opacity_conf.py  reproj_conf.py
splatcredb/features/: __init__.py  density_features.py  gaussian_features.py  geom_features.py  reproj_features.py
splatcredb/io/: __init__.py  cameras.py  npz_io.py  ply_io.py
splatcredb/metrics/: __init__.py  calibration.py  detection.py  selective_utility.py  summary.py
splatcredb/oracle/: __init__.py  geom_error.py  oracle_error.py  render_error.py  topo_error.py
splatcredb/pruning/: __init__.py  merge.py  selective_prune.py  uncertainty_export.py
splatcredb/render/: __init__.py  contribution_trace.py  heldout_render.py
splatcredb/report/: __init__.py  curves.py  html_report.py  tables.py
splatcredb/utils/: __init__.py  logging.py  paths.py  registry.py
tests/: test_cli_smoke.py  test_imports.py  test_metrics_smoke.py
tools/: __init__.py  evaluate.py  export_report.py  prune_and_render.py  visualize_bad_gaussians.py
